# django-snitch

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: job-build-publish.yml  job-lint-test.yml  workflow-pull-request.yml  workflow-push-main.yml  workflow-push-tags.yml
docs/: conf.py  index.rst  requirements.txt
docs/guide/: cool-down.rst  event-handlers.rst  install.rst  usage.rst
docs/reference/: settings.rst
snitch/: __init__.py  admin.py  apps.py  backends.py  constants.py  cooldowns.py  decorators.py  emails.py  exceptions.py  handlers.py  helpers.py  managers.py  models.py  settings.py  tasks.py
snitch/locale/es_ES/LC_MESSAGES/: django.po
snitch/migrations/: 0001_initial.py  0002_alter_eventtype_verb.py  0003_alter_eventtype_verb.py  0004_alter_event_id_alter_eventtype_id_and_more.py  0005_notification_receiver_content_type_and_more.py  0006_auto_20230220_0641.py  0007_remove_notification_user.py
snitch/schedules/: __init__.py  admin.py  apps.py  models.py  tasks.py
snitch/schedules/migrations/: 0001_initial.py  0002_auto_20191118_0940.py  0003_alter_schedule_verb.py  0004_alter_schedule_id.py
tests/: factories.py  settings.py  test_backends.py  test_cool_down.py  test_schedule.py  test_snitch.py
tests/app/: __init__.py  apps.py  emails.py  events.py  factories.py  helpers.py  models.py  signals.py
tests/app/migrations/: 0001_initial.py  0002_otherstuff.py  0003_alter_actor_id_alter_notification_id_and_more.py  0004_notification_receiver_content_type_and_more.py  0005_remove_notification_user.py
tests/app/templates/: email.html  html_email.html
tests/taskapp/: celery.py
