[tool.poetry]
name = "django-snitch"
version = "2.0.0"
description = "Django app made to integrate generic events that create notifications that can be sent to users using several backends."
readme = "README.rst"
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]
license = "MIT"
homepage = "https://github.com/marcosgabarda/django-snitch"
packages = [
    { include = "snitch" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
django-model-utils = "^4.1.1"
bleach = "^3.3.0"
celery = "^5.0.5"
django-celery-beat = "^2.2.0"
django-push-notifications = "^2.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
pytest = "^6.2.3"
black = "^20.8b1"
factory_boy = "^3.2.0"
django-test-plus = "^1.4.0"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"
mypy = "^0.812"
isort = "^5.8.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
