[tool.poetry]
name = "django-snitch"
version = "3.2.0"
description = "Django app made to integrate generic events that create notifications that can be sent to users using several backends."
readme = "README.rst"
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]
license = "MIT"
homepage = "https://github.com/marcosgabarda/django-snitch"
packages = [{ include = "snitch" }]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.0.0"
django-model-utils = ">=4.1.1"
bleach = ">=4.1.0"
celery = ">=5.0.0"
django-celery-beat = ">=2.4.0"
django-push-notifications = ">=2.0.0"
single-source = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
pytest = "^7.4.0"
black = "^23.7.0"
factory_boy = "^3.2.1"
django-test-plus = "^2.2.3"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"
types-bleach = "^6.0.0.0"
autoflake = "^2.0.1"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
